k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-card-shiniasse
spec:
  selector:
    app: student-card-shiniasse
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
