k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-card-shiniasse
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /shiniasse(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: student-card-shiniasse
                port:
                  number: 80
